# jcr_mcp

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION_GUIDE.md  Procfile  QUICKSTART.md  README.md  claude_desktop_config.json  docker-compose.yml  healthcheck.py  pyproject.toml  start.sh  test_client.py  test_deployment.py
examples/: README.md  remote_client_example.py
jcr_mcp/: __init__.py  __main__.py  config.py  database.py  server.py  sync.py
